--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet/less" href="styles/styles.less" type="text/css">
+    <link rel="icon" href="assets/icons/favicon/favicon-32x32.png" type="image/png"/>
     <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script> -->
